--- a/presentation/index.html
+++ b/presentation/index.html
@@ -265,46 +265,58 @@
             </section>
 
             <section>
-                <h2>Les enjeux</h2>
-
-                <div class="stat-box">
-                    <h3>🌍 Environnement</h3>
-                    <p>Le secteur des transports reste le <strong>premier émetteur de gaz à effet de serre</strong></p>
-                </div>
-
-                <div class="stat-box">
-                    <h3>🏥 Santé publique</h3>
-                    <p>Pollution, bruit, sédentarité</p>
-                </div>
-
-                <div class="stat-box">
-                    <h3>👥 Social</h3>
-                    <p>Accessibilité et inclusivité</p>
-                </div>
+                <h2>2020</h2>
+                <ul>
+                    <li>Plaidoyer réalisé par Vélo-Cité</li>
+                    <li>3ième plan vélo de la métropole</li>
+                    <li>Lancement du ReVE
+                        <ul>
+                            <li>14 lignes 272km cyclables (150M €)</li>
+                        </ul>
+                    </li>
+                    <li>De grandes ambitions métropolitaines pour 2030
+                        <ul>
+                            <li>18% de part modale du vélo</li>
+                            <li>32% de part modale de la marche</li>
+                        </ul>
+                    </li>
+                </ul>
             </section>
 
             <section>
-                <h2>Le vélo comme solution</h2>
+                <h2>2026 : une coconstruction</h2>
+                <ul>
+                    <li>Cycles & Manivelles</li>
+                    <li>EtuRecup</li>
+                    <li>La Maison des Livreurs</li>
+                    <li>Les Vélotaffeurs Tressois</li>
+                    <li>Vélo-Cité</li>
+                    <li>Le soutien de x entreprises et x associations</li>
+                </ul>
+            </section>
+            <section>
+                <h2>7 Piliers</h2>
 
                 <ul style="font-size: 1.1em;">
-                    <li>Vélos électriques et cargo : <strong>alternatives crédibles</strong></li>
-                    <li>Allongement des <strong>distances réalisables</strong></li>
-                    <li>Augmentation des <strong>charges transportables</strong></li>
+                    <ol>1. Circuler dans la Métropole</ol>
+                    <ol>2. Circuler dans mon Quartier</ol>
+                    <ol>3. Les piéton·nes</ol>
+                    <ol>4. Les écoles</ol>
+                    <ol>5. Intermodaolté et stationnement</ol>
+                    <ol>6. Guide des aménagements</ol>
+                    <ol>7. Le plan vélo</ol>
                 </ul>
-
-                <div class="focus-box" style="margin-top: 50px;">
-                    <h3>⚠️ Frein principal</h3>
-                    <p style="font-size: 1.2em;">Les <strong>infrastructures</strong></p>
-                </div>
             </section>
 
             <section>
                 <h2>Notre approche</h2>
 
                 <div class="engagement" style="font-size: 1.1em;">
-                    <p><strong>Nous invitons les candidat·e·s à s'engager mesure par mesure</strong></p>
-                    <p style="margin-top: 20px;">Cette approche permet une plus grande souplesse, sans nécessiter
-                        d'adhérer à l'intégralité des propositions.</p>
+                    <p><strong>Nous invitons les candidat·es à s'engager mesure par mesure</strong></p>
+                    <ul>
+                        <li>Souplesse</li>
+                        <li>Pas d'engagement pour à l'intégralité des propositions</li>
+                    </ul>
                 </div>
             </section>
         </section>
@@ -313,124 +325,70 @@
         <section>
             <section>
                 <h2>1. Circuler dans la Métropole</h2>
-                <h3>Le Réseau Vélo Express (ReVE)</h3>
-
-                <div class="stat-box">
-                    <div class="stat-number">14</div>
-                    <p>itinéraires</p>
-                </div>
-                <div class="stat-box">
-                    <div class="stat-number">272 km</div>
-                    <p>de voies cyclables</p>
-                </div>
-
-                <p style="font-size: 1.2em; margin-top: 40px;"><strong>Objectif</strong> : Atteindre 18% de part modale
-                    du vélo d'ici 2030</p>
-            </section>
-
-            <section>
-                <h2>Le ReVE : Des parcours de qualité</h2>
-
-                <ul style="font-size: 1.2em;">
-                    <li>🚀 <strong>Rapides</strong></li>
-                    <li>🎯 <strong>Clairs</strong></li>
-                    <li>😊 <strong>Confortables</strong></li>
-                    <li>🛡️ <strong>Sécurisés</strong></li>
-                    <li>🔄 <strong>Sans interruption</strong></li>
-                </ul>
-            </section>
-
-            <section>
-                <h2>Avancement en 2025</h2>
-
-                <div class="stat-box">
-                    <p>✅ Réalisé</p>
-                    <div class="stat-number">38 km</div>
-                    <p>14%</p>
-                </div>
-
-                <div class="stat-box">
-                    <p>🚧 En chantier</p>
-                    <div class="stat-number">16 km</div>
-                    <p>6%</p>
-                </div>
-
-                <div class="stat-box">
-                    <p>📋 À l'étude</p>
-                    <div class="stat-number">96 km</div>
-                    <p>36%</p>
-                </div>
-            </section>
-
-            <section>
-                <h2>Carte du ReVE</h2>
-                <div class="image-container">
-                    <img src="slide-3.png" alt="Carte du ReVE" style="max-height: 70vh;">
-                </div>
-            </section>
-
-            <section>
-                <h2>Bordeaux Métropole en chiffres clés</h2>
-                <p style="font-size: 0.8em; font-style: italic;">Données issues de l'enquête mobilité Gironde 2021</p>
-
-                <div class="stat-box">
-                    <div class="stat-number">8%</div>
-                    <p>Part modale du vélo en 2021</p>
-                    <p>→ Objectif 2030 : <strong>18%</strong> (+124%)</p>
-                </div>
-
-                <div class="stat-box">
-                    <div class="stat-number">29%</div>
-                    <p>Part modale de la marche en 2021</p>
-                    <p>→ Objectif 2030 : <strong>32%</strong> (+28%)</p>
-                </div>
-            </section>
-
-            <section>
-                <h2>Chiffres clés (suite)</h2>
-
-                <div class="stat-box">
-                    <div class="stat-number">70%</div>
-                    <p>des déplacements en Gironde font moins de 5 km</p>
-                </div>
-
-                <div class="stat-box">
-                    <div class="stat-number">52 000</div>
-                    <p>vélos à assistance électrique en circulation</p>
-                </div>
-            </section>
-
-            <section>
-                <h2>Chiffres clés (suite)</h2>
-
-                <div class="stat-box">
-                    <div class="stat-number">23%</div>
-                    <p>des ménages n'ont pas de voiture individuelle</p>
-                </div>
-
-                <div class="stat-box">
-                    <div class="stat-number">80</div>
-                    <p>« rues aux enfants » (22% des écoles)</p>
-                </div>
-            </section>
-
-            <section>
-                <h2>Le potentiel du vélo</h2>
-
-                <div class="focus-box" style="font-size: 1.2em; text-align: center;">
-                    <p style="font-size: 1.5em;"><strong>60%</strong></p>
-                    <p>des déplacements de 2 à 5 km se font encore en voiture</p>
-                    <p style="margin-top: 30px; font-size: 1.3em;">⬇️</p>
-                    <p><strong>10 à 20 minutes à vélo</strong></p>
-                </div>
-            </section>
-            <section>
-                <h2>Mes engagements pour la Métropole</h2>
                 <p style="font-size: 1.2em; text-align: center; margin-top: 50px;">8 engagements pour développer le
                     vélo</p>
-                <p style="text-align: center; opacity: 0.7;">↓ Appuyez sur la flèche bas pour découvrir chaque
-                    engagement</p>
             </section>
+
+<!--            <section>-->
+<!--                <h2>1. Circuler dans la Métropole</h2>-->
+<!--                <h3>Le Réseau Vélo Express (ReVE)</h3>-->
+<!--                <p><span class="stat-number">14</span> itinéraires</p>-->
+<!--                <p><span class="stat-number">272 km</span> de voies cyclables</p>-->
+<!--                <p style="font-size: 1.2em; margin-top: 40px;"><strong>Objectif</strong> : Atteindre 18% de part modale-->
+<!--                    du vélo d'ici 2030</p>-->
+<!--            </section>-->
+
+<!--            <section>-->
+<!--                <h2>Le ReVE : Des parcours de qualité</h2>-->
+
+<!--                <ul style="font-size: 1.2em;">-->
+<!--                    <li><strong>Rapides</strong></li>-->
+<!--                    <li><strong>Clairs</strong></li>-->
+<!--                    <li><strong>Confortables</strong></li>-->
+<!--                    <li><strong>Sécurisés</strong></li>-->
+<!--                    <li><strong>Sans interruption</strong></li>-->
+<!--                </ul>-->
+<!--            </section>-->
+
+<!--            <section>-->
+<!--                <h2>Avancement en 2025</h2>-->
+
+<!--                <div class="stat-box">-->
+<!--                    <p>Réalisé : <span class="stat-number">38 km</span> (<span>14%</span>)</p>-->
+<!--                </div>-->
+
+<!--                <div class="stat-box">-->
+<!--                    <p>En chantier : <span class="stat-number">16 km</span> (<span>6%</span>)</p>-->
+<!--                </div>-->
+
+<!--                <div class="stat-box">-->
+<!--                    <p>À l'étude : <span class="stat-number">96 km</span> (<span>36%</span>)</p>-->
+<!--                </div>-->
+<!--            </section>-->
+
+<!--            <section>-->
+<!--                <h2>Carte du ReVE</h2>-->
+<!--                <div class="image-container">-->
+<!--                    <img src="slide-3.png" alt="Carte du ReVE" style="max-height: 70vh;">-->
+<!--                </div>-->
+<!--            </section>-->
+
+<!--            <section>-->
+<!--                <h2>Bordeaux Métropole en chiffres clés</h2>-->
+<!--                <div class="stat-box">-->
+<!--                    <p>-->
+<!--                        <span class="stat-number">8%</span> <span>Part du vélo en 2021</span>-->
+<!--                    </p>-->
+<!--                    <p>→ Objectif 2030 : <strong>18%</strong> (+124%)</p>-->
+<!--                </div>-->
+
+<!--                <div class="stat-box">-->
+<!--                    <p>-->
+<!--                        <span class="stat-number">29%</span> <span>Part modale de la marche en 2021</span>-->
+<!--                    </p>-->
+<!--                    <p>→ Objectif 2030 : <strong>32%</strong> (+28%)</p>-->
+<!--                </div>-->
+<!--            </section>-->
 
             <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=1920&h=1080&fit=crop">
                 <div class="fragment" style="text-align: center;">
@@ -550,11 +508,9 @@
             </section>
 
             <section>
-                <h2>Mes engagements pour des quartiers apaisés</h2>
+                <h2>Les engagements pour des quartiers apaisés</h2>
                 <p style="font-size: 1.2em; text-align: center; margin-top: 50px;">6 engagements pour des quartiers
                     vivants</p>
-                <p style="text-align: center; opacity: 0.7;">↓ Appuyez sur la flèche bas pour découvrir chaque
-                    engagement</p>
             </section>
 
             <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1519003722824-194d4455a60c?w=1920&h=1080&fit=crop">
@@ -634,8 +590,6 @@
             <section>
                 <h2>3. Les piéton·nes</h2>
                 <p style="font-size: 1.2em; text-align: center; margin-top: 50px;">4 engagements pour les piétons</p>
-                <p style="text-align: center; opacity: 0.7;">↓ Appuyez sur la flèche bas pour découvrir chaque
-                    engagement</p>
             </section>
 
             <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1573152143286-0c422b4d2175?w=1920&h=1080&fit=crop">
@@ -690,8 +644,6 @@
                 <h2>4. Les écoles</h2>
                 <h3>Pour des écoles apaisées et des enfants qui savent rouler à vélo</h3>
                 <p style="font-size: 1.2em; text-align: center; margin-top: 50px;">3 engagements pour les écoles</p>
-                <p style="text-align: center; opacity: 0.7;">↓ Appuyez sur la flèche bas pour découvrir chaque
-                    engagement</p>
             </section>
 
             <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?w=1920&h=1080&fit=crop">
@@ -829,8 +781,6 @@
                 <h3>Sécurité et confort</h3>
                 <p style="font-size: 1.2em; text-align: center; margin-top: 50px;">9 engagements pour des aménagements
                     de qualité</p>
-                <p style="text-align: center; opacity: 0.7;">↓ Appuyez sur la flèche bas pour découvrir chaque
-                    engagement</p>
             </section>
 
             <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1541888946425-d81bb19240f5?w=1920&h=1080&fit=crop">
@@ -946,8 +896,6 @@
                 <h3>Pour déployer une politique ambitieuse pour les modes actifs</h3>
                 <p style="font-size: 1.2em; text-align: center; margin-top: 50px;">4 engagements pour une politique
                     structurée</p>
-                <p style="text-align: center; opacity: 0.7;">↓ Appuyez sur la flèche bas pour découvrir chaque
-                    engagement</p>
             </section>
 
             <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?w=1920&h=1080&fit=crop">
