ajout d'image pour la présentation

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -452,12 +452,6 @@
                         <strong>Généraliser le panneau M12 au grand format.<br>
                             Communiquer pour le faire connaître</strong>
                     </div>
-                    <div class="focus-box" style="margin-top: 30px;">
-                        <h3>Le panneau M12, c'est quoi ?</h3>
-                        <p>Ce panneau offre la possibilité aux cyclistes de passer quand le feu est rouge, uniquement
-                            dans la direction indiquée par la ou les flèches jaunes. Un feu tricolore devient donc un
-                            cédez-le-passage cycliste.</p>
-                    </div>
                 </div>
             </section>
 
@@ -483,9 +477,9 @@
                 </div>
             </section>
 
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1544620347-c4fd4a3d5957?w=1920&h=1080&fit=crop">
+            <section class="engagement-slide" data-background-image="boulevard.jpeg">
                 <div class="fragment" style="text-align: center;">
-                    <img src="https://images.unsplash.com/photo-1544620347-c4fd4a3d5957?w=400&h=300&fit=crop"
+                    <img src="boulevard.jpeg"
                          alt="Boulevard avec piste cyclable"
                          style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
 
@@ -517,10 +511,10 @@
                     vivants</p>
             </section>
 
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1519003722824-194d4455a60c?w=1920&h=1080&fit=crop">
+            <section class="engagement-slide" data-background-image="ordre-mode.avif    ">
                 <div class="fragment" style="text-align: center;">
-                    <img src="https://images.unsplash.com/photo-1519003722824-194d4455a60c?w=400&h=300&fit=crop"
-                         alt="Rue partagée" style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
+                    <img src="ordre-mode.avif"
+                         alt="" style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
 
                     <div class="engagement" style="font-size: 1.3em; text-align: center; padding: 40px;">
                         <strong>Privilégier dans l'ordre : piéton·nes, vélos, transports en commun, puis voiture
@@ -563,9 +557,9 @@
                 </div>
             </section>
 
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1485081669829-bacb8c7bb1f3?w=1920&h=1080&fit=crop">
+            <section class="engagement-slide" data-background-image="stationnement.webp">
                 <div class="fragment" style="text-align: center;">
-                    <img src="https://images.unsplash.com/photo-1485081669829-bacb8c7bb1f3?w=400&h=300&fit=crop"
+                    <img src="stationnement.webp"
                          alt="Stationnement vélo" style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
 
                     <div class="engagement" style="font-size: 1.3em; text-align: center; padding: 40px;">
@@ -575,9 +569,9 @@
                 </div>
             </section>
 
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1570125909232-eb263c188f7e?w=1920&h=1080&fit=crop">
+            <section class="engagement-slide" data-background-image="couloir-de-bus.jpg">
                 <div class="fragment" style="text-align: center;">
-                    <img src="https://images.unsplash.com/photo-1570125909232-eb263c188f7e?w=400&h=300&fit=crop"
+                    <img src="piste-quai.png"
                          alt="Bus et vélo" style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
 
                     <div class="engagement" style="font-size: 1.3em; text-align: center; padding: 40px;">
@@ -610,14 +604,14 @@
                          alt="Zone piétonne" style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
 
                     <div class="engagement" style="font-size: 1.3em; text-align: center; padding: 40px;">
-                        <strong>Développer des cœurs de quartier piétons et une trame piétonne</strong>
+                        <strong>Développer des cœurs de quartier piétons et des trames piétonnes</strong>
                     </div>
                 </div>
             </section>
 
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1541625602330-2277a4c46182?w=1920&h=1080&fit=crop">
+            <section class="engagement-slide" data-background-image="sainte-catherine.webp">
                 <div class="fragment" style="text-align: center;">
-                    <img src="https://images.unsplash.com/photo-1541625602330-2277a4c46182?w=400&h=300&fit=crop"
+                    <img src="sainte-catherine.webp"
                          alt="Piste cyclable et trottoir"
                          style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
 
@@ -627,9 +621,9 @@
                 </div>
             </section>
 
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1464207687429-7505649dae38?w=1920&h=1080&fit=crop">
+            <section class="engagement-slide" data-background-image="trottoir-traversant.jpeg">
                 <div class="fragment" style="text-align: center;">
-                    <img src="https://images.unsplash.com/photo-1464207687429-7505649dae38?w=400&h=300&fit=crop"
+                    <img src="trottoir-traversant.jpeg"
                          alt="Trottoir traversant" style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
 
                     <div class="engagement" style="font-size: 1.3em; text-align: center; padding: 40px;">
@@ -638,9 +632,9 @@
                 </div>
             </section>
 
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1489824904134-891ab64532f1?w=1920&h=1080&fit=crop">
+            <section class="engagement-slide" data-background-image="Montagne_russe.jpg">
                 <div class="fragment" style="text-align: center;">
-                    <img src="https://images.unsplash.com/photo-1489824904134-891ab64532f1?w=400&h=300&fit=crop"
+                    <img src="bateau_trottoir_plat.jpeg"
                          alt="Accessibilité" style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
 
                     <div class="engagement" style="font-size: 1.3em; text-align: center; padding: 40px;">
@@ -680,9 +674,9 @@
                 </div>
             </section>
 
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1511632765486-a01980e01a18?w=1920&h=1080&fit=crop">
+            <section class="engagement-slide" data-background-image="velotaffeurstressois-velobus.jpg">
                 <div class="fragment" style="text-align: center;">
-                    <img src="https://images.unsplash.com/photo-1511632765486-a01980e01a18?w=400&h=300&fit=crop"
+                    <img src="velotaffeurstressois-velobus.jpg"
                          alt="Famille à vélo" style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
 
                     <div class="engagement" style="font-size: 1.3em; text-align: center; padding: 40px;">
@@ -702,9 +696,9 @@
                 <p style="font-size: 1.2em; text-align: center; margin-top: 50px;">5 engagements pour faciliter l'intermodalité</p>
             </section>
 
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1920&h=1080&fit=crop">
+            <section class="engagement-slide" data-background-image="velo-station.webp">
                 <div class="fragment" style="text-align: center;">
-                    <img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=400&h=300&fit=crop"
+                    <img src="velo-station-2.webp"
                          alt="Parking vélo sécurisé"
                          style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
 
@@ -714,9 +708,9 @@
                 </div>
             </section>
 
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1568605117036-5fe5e7bab0b7?w=1920&h=1080&fit=crop">
+            <section class="engagement-slide" data-background-image="metstation.png">
                 <div class="fragment" style="text-align: center;">
-                    <img src="https://images.unsplash.com/photo-1568605117036-5fe5e7bab0b7?w=400&h=300&fit=crop"
+                    <img src="metstation.png"
                          alt="Metstation" style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
 
                     <div class="engagement" style="font-size: 1.3em; text-align: center; padding: 40px;">
@@ -725,9 +719,9 @@
                 </div>
             </section>
 
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1633613286991-611fe299c4be?w=1920&h=1080&fit=crop">
+            <section class="engagement-slide" data-background-image="metstation-2.jpeg">
                 <div class="fragment" style="text-align: center;">
-                    <img src="https://images.unsplash.com/photo-1633613286991-611fe299c4be?w=400&h=300&fit=crop"
+                    <img src="metstation-2.jpeg"
                          alt="Abonnement" style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
 
                     <div class="engagement" style="font-size: 1.3em; text-align: center; padding: 40px;">
@@ -736,9 +730,9 @@
                 </div>
             </section>
 
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1559827260-dc66d52bef19?w=1920&h=1080&fit=crop">
+            <section class="engagement-slide" data-background-image="Vélobox.jpg">
                 <div class="fragment" style="text-align: center;">
-                    <img src="https://images.unsplash.com/photo-1559827260-dc66d52bef19?w=400&h=300&fit=crop"
+                    <img src="Vélobox.jpg"
                          alt="Vélobox" style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
 
                     <div class="engagement" style="font-size: 1.3em; text-align: center; padding: 40px;">
@@ -768,9 +762,9 @@
                     de qualité</p>
             </section>
 
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1541888946425-d81bb19240f5?w=1920&h=1080&fit=crop">
+            <section class="engagement-slide" data-background-image="couleur.jpg">
                 <div class="fragment" style="text-align: center;">
-                    <img src="https://images.unsplash.com/photo-1541888946425-d81bb19240f5?w=400&h=300&fit=crop"
+                    <img src="couleur.jpg"
                          alt="Piste cyclable rouge"
                          style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
 
@@ -780,9 +774,9 @@
                 </div>
             </section>
 
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1587974928442-77dc3e0dba72?w=1920&h=1080&fit=crop">
+            <section class="engagement-slide" data-background-image="stabilise.jpg">
                 <div class="fragment" style="text-align: center;">
-                    <img src="https://images.unsplash.com/photo-1587974928442-77dc3e0dba72?w=400&h=300&fit=crop"
+                    <img src="stabilise.jpg"
                          alt="Revêtement de qualité"
                          style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
 
@@ -792,9 +786,9 @@
                 </div>
             </section>
 
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1590523741831-ab7e8b8f9c7f?w=1920&h=1080&fit=crop">
+            <section class="engagement-slide" data-background-image="piste-traversante.jpg">
                 <div class="fragment" style="text-align: center;">
-                    <img src="https://images.unsplash.com/photo-1590523741831-ab7e8b8f9c7f?w=400&h=300&fit=crop"
+                    <img src="piste-traversante.jpg"
                          alt="Trottoir traversant" style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
 
                     <div class="engagement" style="font-size: 1.3em; text-align: center; padding: 40px;">
@@ -803,20 +797,9 @@
                 </div>
             </section>
 
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1578662996442-48f60103fc96?w=1920&h=1080&fit=crop">
+            <section class="engagement-slide" data-background-image="montreuil.jpg">
                 <div class="fragment" style="text-align: center;">
-                    <img src="https://images.unsplash.com/photo-1578662996442-48f60103fc96?w=400&h=300&fit=crop"
-                         alt="Trottoir plat" style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
-
-                    <div class="engagement" style="font-size: 1.3em; text-align: center; padding: 40px;">
-                        <strong>Aménager des trottoirs plats sans "bateaux"</strong>
-                    </div>
-                </div>
-            </section>
-
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1571068316344-75bc76f77890?w=1920&h=1080&fit=crop">
-                <div class="fragment" style="text-align: center;">
-                    <img src="https://images.unsplash.com/photo-1571068316344-75bc76f77890?w=400&h=300&fit=crop"
+                    <img src="montreuil.jpg"
                          alt="Piste cyclable sans bordure"
                          style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
 
@@ -826,9 +809,9 @@
                 </div>
             </section>
 
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1544620347-c4fd4a3d5957?w=1920&h=1080&fit=crop">
+            <section class="engagement-slide" data-background-image="arret-flotant.jpg">
                 <div class="fragment" style="text-align: center;">
-                    <img src="https://images.unsplash.com/photo-1544620347-c4fd4a3d5957?w=400&h=300&fit=crop"
+                    <img src="arret-flotant.jpg"
                          alt="Arrêt de bus flottant"
                          style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
 
@@ -838,9 +821,9 @@
                 </div>
             </section>
 
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1449965408869-eaa3f722e40d?w=1920&h=1080&fit=crop">
+            <section class="engagement-slide" data-background-image="emportierage.jpg">
                 <div class="fragment" style="text-align: center;">
-                    <img src="https://images.unsplash.com/photo-1449965408869-eaa3f722e40d?w=400&h=300&fit=crop"
+                    <img src="emportierage.jpg"
                          alt="Zone tampon" style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
 
                     <div class="engagement" style="font-size: 1.3em; text-align: center; padding: 40px;">
@@ -849,9 +832,9 @@
                 </div>
             </section>
 
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?w=1920&h=1080&fit=crop">
+            <section class="engagement-slide" data-background-image="velo-sas-sensbilisation-rennes.jpg">
                 <div class="fragment" style="text-align: center;">
-                    <img src="https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?w=400&h=300&fit=crop"
+                    <img src="velo-sas-sensbilisation-rennes.jpg"
                          alt="Sas vélo" style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
 
                     <div class="engagement" style="font-size: 1.3em; text-align: center; padding: 40px;">
