presentation : retour de Virginie

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -301,7 +301,7 @@
                 <h2>2026 : une coconstruction</h2>
                 <ul>
                     <li>Cycles & Manivelles</li>
-                    <li>EtuRecup</li>
+                    <li>Etu'Recup</li>
                     <li>La Maison des Livreurs</li>
                     <li>Les Vélotaffeurs Tressois</li>
                     <li>Vélo-Cité</li>
@@ -329,7 +329,7 @@
                     <p><strong>Nous invitons les candidat·es à s'engager mesure par mesure</strong></p>
                     <ul>
                         <li>Souplesse</li>
-                        <li>Pas d'engagement pour à l'intégralité des propositions</li>
+                        <li>Pas d'engagement pour l'intégralité des propositions</li>
                     </ul>
                 </div>
             </section>
