[LAYOUT] presentation : ajout d'images

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -417,13 +417,8 @@
             </section>
 
             <section class="engagement-slide" data-background-image="https://reve.velo-cite.org/reve/3/reve-3-allees-de-boutaut-nord.jpg">
-                <div>
-                    <img src="https://reve.velo-cite.org/reve/3/reve-3-allees-de-boutaut-nord.jpg"
-                         alt="Cycliste rapide" style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
-
-                    <div class="engagement" style="font-size: 1.3em; padding: 40px;">
-                        <strong>Accélérer le déploiement du ReVE pour tenir l'échéance de livraison à 2030</strong>
-                    </div>
+                <div class="engagement" style="font-size: 1.3em; padding: 40px;">
+                    <strong>Accélérer le déploiement du ReVE pour tenir l'échéance de livraison à 2030</strong>
                 </div>
             </section>
 
@@ -449,9 +444,6 @@
 
             <section class="engagement-slide" data-background-size="800px" data-background-image="https://upload.wikimedia.org/wikipedia/fr/thumb/f/f6/Bordeaux_Metropole_Logo.svg/1280px-Bordeaux_Metropole_Logo.svg.png">
                 <div class="fragment">
-                    <img src="https://upload.wikimedia.org/wikipedia/fr/thumb/f/f6/Bordeaux_Metropole_Logo.svg/1280px-Bordeaux_Metropole_Logo.svg.png"
-                         alt="" style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
-
                     <div class="engagement" style="font-size: 1.3em; padding: 40px;">
                         <strong>Renforcer le Service Modes Actifs en moyens humains, financiers et décisionnels</strong>
                     </div>
@@ -586,7 +578,7 @@
                 </div>
             </section>
 
-            <section class="engagement-slide" data-background-image="trottoir-traversant.jpeg">
+            <section class="engagement-slide" data-background-image="trottoir-traversant.jpg">
                 <div class="fragment">
                     <div class="engagement" style="font-size: 1.3em; padding: 40px;">
                         <strong>Généraliser les trottoirs traversants pour plus de sécurité et de confort</strong>
@@ -651,15 +643,14 @@
 
             <section class="engagement-slide" data-background-image="velo-station.webp">
                 <div class="fragment">
-                    <img src="velo-station-2.webp"
-                         alt="Parking vélo sécurisé"
-                         style="max-height: 250px; border-radius: 10px; margin-bottom: 20px;">
-
                     <div class="engagement" style="font-size: 1.3em; padding: 40px;">
                         <strong>Proposer des stationnements sécurisés, faciles d'accès, et quantitativement adaptés à chaque gare ou pôle multimodal</strong>
                     </div>
                 </div>
             </section>
+            <section class="engagement-slide" data-background-image="velo-station-2.webp">
+            </section>
+
 
             <section class="engagement-slide" data-background-image="metstation.png" data-background-size="1400px">
                 <div class="fragment">
@@ -795,7 +786,7 @@
                 </div>
             </section>
 
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1557804506-669a67965ba0?w=1920&h=1080&fit=crop">
+            <section class="engagement-slide" data-background-image="communication.jpg" data-background-size="1400px">
                 <div class="fragment">
                     <div class="engagement" style="font-size: 1.3em; padding: 40px;">
                         <strong>Communiquer favorablement et régulièrement sur le vélo</strong>
@@ -805,7 +796,7 @@
                 </div>
             </section>
 
-            <section class="engagement-slide" data-background-image="https://images.unsplash.com/photo-1521737711867-e3b97375f902?w=1920&h=1080&fit=crop">
+            <section class="engagement-slide" data-background-image="rencontre.jpg">
                 <div class="fragment">
                     <div class="engagement" style="font-size: 1.3em; padding: 40px;">
                         <strong>Organiser des rencontres entre associations vélos, adjoint·es (voirie et sécurité) et services
